FIX(win32) : prevent from showing the scrollbar when printing to PDF.

--- a/app/assets/stylesheets/index-print.css
+++ b/app/assets/stylesheets/index-print.css
@@ -5,6 +5,9 @@
     width: 100%;
     float: none;
   }
+  .resize-wrap .resizable.pane-right #preview {
+    overflow-y: visible;
+  }
   .resize-wrap .resizable.pane-right #preview .content {
     padding: 0;
   }
